take navbar script into index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
     <link rel="stylesheet" href="navbar.css">
-    <script src="../navbar.js" defer></script>
+    <!--<script src="../navbar.js" defer></script>-->
+	
+	<script>
+	document.addEventListener("DOMContentLoaded", function() {
+    fetch("navbar.html")  // Adjust path if needed
+        .then(response => response.text())
+        .then(html => {
+            document.getElementById("navbar-container").innerHTML = html;
+            attachMenuClickEvents(); // Ensure submenu events are attached after load
+        });
+});
+
+function attachMenuClickEvents() {
+    document.getElementById("navbar-container").addEventListener("click", function(event) {
+        let target = event.target.closest(".menu-item > a");
+        if (!target) return;
+
+        let submenu = target.nextElementSibling;
+        if (submenu && submenu.classList.contains("submenu")) {
+            event.preventDefault(); // Prevent default only for submenu items
+            
+            // Close all other submenus
+            document.querySelectorAll(".submenu").forEach(menu => {
+                if (menu !== submenu) {
+                    menu.style.display = "none";
+                }
+            });
+            
+            // Toggle the clicked submenu
+            submenu.style.display = (submenu.style.display === "block" ? "none" : "block");
+        } else {
+            // Allow normal navigation for non-submenu items
+            window.location.href = target.href;
+        }
+    });
+}
+
+	</script>
+	
 	<script src="../img_modal.js" defer></script>
 
 <style>
