--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,6 @@
 <div class="navbar">
     <div class="menu-item">
-        <a href="../index.html">Home</a>
+        <a href="../d_dash/index.html">Home</a>
     </div>
     <div class="menu-item">
         <a href="#">Balances</a>
@@ -13,8 +13,8 @@
     <div class="menu-item">
         <a href="#">Demand</a>
         <div class="submenu">
-            <a href="../test/wx_temps.html">Test</a>
-            <a href="../test/wx_temps.html">Test2</a>
+            <a href="../d_dash/test/wx_temps.html">Test</a>
+            <a href="../d_dash/test/wx_temps.html">Test2</a>
         </div>
     </div>
     <div class="menu-item">
@@ -24,10 +24,10 @@
     <div class="menu-item">
         <a href="#">Storage</a>
         <div class="submenu">
-			<a href="../storage/nwe_stg.html">NWE</a>
-			<a href="../storage/cee_stg.html">CEE</a>
-			<a href="../storage/see_stg.html">SEE</a>
-			<a href="../storage/swe_stg.html">SWE</a>
+			<a href="../d_dash/storage/nwe_stg.html">NWE</a>
+			<a href="../d_dash/storage/cee_stg.html">CEE</a>
+			<a href="../d_dash/storage/see_stg.html">SEE</a>
+			<a href="../d_dash/storage/swe_stg.html">SWE</a>
 		</div>
     </div>
     <div class="menu-item">
@@ -37,8 +37,8 @@
     <div class="menu-item">
         <a href="#">Weather</a>
         <div class="submenu">
-            <a href="../test/wx_temps.html">Test</a>
-            <a href="../test/wx_temps.html">Test2</a>
+            <a href="../d_dash/test/wx_temps.html">Test</a>
+            <a href="../d_dash/test/wx_temps.html">Test2</a>
         </div>
     </div>
 </div>
