--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,6 @@
 <div class="navbar">
     <div class="menu-item">
-        <a href="/index.html">Home</a>
+        <a href="/d_dash/index.html">Home</a>
     </div>
     <div class="menu-item">
         <a href="#">Balances</a>
