--- a/index.html
+++ b/index.html
@@ -72,6 +72,28 @@ body {
 }
 
 </style>
+
+<script src="https://cdn.jsdelivr.net/npm/netlify-identity-widget@1.9.1/build/netlify-identity-widget.min.js"></script>
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        netlifyIdentity.init();
+
+        // Redirect to login page if user is not logged in
+        netlifyIdentity.on("init", user => {
+            if (!user) {
+                window.location.href = "/login.html"; // Redirect to login page
+            }
+        });
+
+        // Logout redirects back to login
+        netlifyIdentity.on("logout", () => {
+            window.location.href = "/login.html";
+        });
+    });
+</script>
+
+
+
 </head>
 <body>
 
