navbar links made

--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@ body {
 }
 
 </style>
+
+<script>
+    if (!localStorage.getItem("auth")) {
+        window.location.href = "login.html"; // Redirect to login page if user is not logged in
+    }
+</script>
+
+
+
 </head>
 <body>
 
