--- a/navbar.html
+++ b/navbar.html
@@ -41,4 +41,5 @@
             <a href="/d_dash/test/wx_temps.html">Test2</a>
         </div>
     </div>
+	<button id="logout-btn" onclick="logout()" style="display: none;">Logout</button>
 </div>
