--- a/storage/see_stg.html
+++ b/storage/see_stg.html
@@ -383,6 +383,12 @@ body {
         });
 </script>
 
+<script>
+    if (!localStorage.getItem("auth")) {
+        window.location.href = "login.html"; // Redirect to login page if user is not logged in
+    }
+</script>
+
 	
 </body>
 </html>
