--- a/test/wx_temps.html
+++ b/test/wx_temps.html
@@ -351,6 +351,12 @@
 	loadTable("table-container-2", "tbl/table2.html");
 </script>
 
+<script>
+    if (!localStorage.getItem("auth")) {
+        window.location.href = "login.html"; // Redirect to login page if user is not logged in
+    }
+</script>
+
 	
 </body>
 </html>
