--- a/storage/cee_stg.html
+++ b/storage/cee_stg.html
@@ -397,6 +397,13 @@ body {
         });
 </script>
 
+<script>
+    if (!localStorage.getItem("auth")) {
+        window.location.href = "login.html"; // Redirect to login page if user is not logged in
+    }
+</script>
+
+
 
 	
 </body>
