--- a/storage/swe_stg.html
+++ b/storage/swe_stg.html
@@ -378,6 +378,13 @@ body {
         });
 </script>
 
+<script>
+    if (!localStorage.getItem("auth")) {
+        window.location.href = "login.html"; // Redirect to login page if user is not logged in
+    }
+</script>
+
+
 	
 </body>
 </html>
