--- a/storage/nwe_stg.html
+++ b/storage/nwe_stg.html
@@ -438,7 +438,7 @@ body {
 
 <script>
     if (!localStorage.getItem("auth")) {
-        window.location.href = "login.html"; // Redirect to login page if user is not logged in
+        window.location.href = "/d_dash/login.html"; // Redirect to login page if user is not authenticated
     }
 </script>
 
