--- a/test/wx_temps.html
+++ b/test/wx_temps.html
@@ -350,12 +350,12 @@
 	loadTable("table-container-1", "tbl/table1.html");
 	loadTable("table-container-2", "tbl/table2.html");
 </script>
-
 <script>
     if (!localStorage.getItem("auth")) {
-        window.location.href = "login.html"; // Redirect to login page if user is not logged in
+        window.location.href = "/d_dash/login.html"; // Redirect to login page if user is not authenticated
     }
 </script>
+
 
 	
 </body>
