--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@ body {
     }
 </script>
 
+<script src="/d_dash/auth.js"></script>
+<script>
+    if (localStorage.getItem("auth")) {
+        window.location.href = "/index.html"; // Redirect logged-in users
+    }
+</script>
 
 
 </head>
