--- a/storage/see_stg.html
+++ b/storage/see_stg.html
@@ -383,9 +383,10 @@ body {
         });
 </script>
 
+<script src="/d_dash/auth.js"></script>
 <script>
-    if (!localStorage.getItem("auth")) {
-        window.location.href = "/d_dash/login.html"; // Redirect to login page if user is not authenticated
+    if (localStorage.getItem("auth")) {
+        window.location.href = "/index.html"; // Redirect logged-in users
     }
 </script>
 
