--- a/test/wx_temps.html
+++ b/test/wx_temps.html
@@ -350,11 +350,13 @@
 	loadTable("table-container-1", "tbl/table1.html");
 	loadTable("table-container-2", "tbl/table2.html");
 </script>
+<script src="/d_dash/auth.js"></script>
 <script>
-    if (!localStorage.getItem("auth")) {
-        window.location.href = "/d_dash/login.html"; // Redirect to login page if user is not authenticated
+    if (localStorage.getItem("auth")) {
+        window.location.href = "/index.html"; // Redirect logged-in users
     }
 </script>
+
 
 
 	
