--- a/storage/swe_stg.html
+++ b/storage/swe_stg.html
@@ -378,13 +378,10 @@ body {
         });
 </script>
 
-<script src="/d_dash/auth.js"></script>
-<script>
-    if (localStorage.getItem("auth")) {
-        window.location.href = "/index.html"; // Redirect logged-in users
-    }
-</script>
-
+    <script src="/d_dash/auth.js"></script> <!-- Ensure correct path -->
+    <script>
+        checkAuth(); // Enforce authentication
+    </script>
 
 	
 </body>
