--- a/storage/see_stg.html
+++ b/storage/see_stg.html
@@ -382,13 +382,11 @@ body {
             console.error('Error:', error);
         });
 </script>
-
 <script src="/d_dash/auth.js"></script>
 <script>
-    if (localStorage.getItem("auth")) {
-        window.location.href = "/index.html"; // Redirect logged-in users
-    }
+    checkAuth(); // Ensure unauthorized users are redirected to login.html
 </script>
+
 
 	
 </body>
