--- a/login.html
+++ b/login.html
@@ -1,36 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<script src="auth.js"></script>
+    <script src="/d_dash/auth.js"></script> <!-- ✅ Load auth.js -->
+    <script>
+        if (localStorage.getItem("auth")) {
+            window.location.href = "/index.html"; // Redirect logged-in users
+        }
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <script>
-		function login() {
-			const user = document.getElementById("username").value;
-			const pass = document.getElementById("password").value;
-
-			const validUsers = {
-				"admin": "password123",
-				"user1": "mypassword",
-				"testuser": "test123"
-			};
-
-			if (validUsers[user] && validUsers[user] === pass) {
-				localStorage.setItem("auth", "true"); // Store login state
-				localStorage.setItem("username", user); // Store username
-				window.location.href = "index.html"; // Redirect to homepage
-			} else {
-				document.getElementById("error-msg").innerText = "Invalid credentials! Try again.";
-			}
-		}
-
-    </script>
 </head>
 <body>
     <h2>Login</h2>
     <input type="text" id="username" placeholder="Username">
     <input type="password" id="password" placeholder="Password">
     <button onclick="login()">Login</button>
+    <p id="error-msg" style="color: red;"></p>
 </body>
 </html>
