--- a/navbar.html
+++ b/navbar.html
@@ -8,7 +8,9 @@
     </div>
     <div class="menu-item">
         <a href="#">Prices</a>
-        <div class="submenu"></div>
+        <div class="submenu">
+			<a href="/d_dash/prices/macro.html">Macro</a>
+		</div>
     </div>
     <div class="menu-item">
         <a href="#">Demand</a>
