--- a/prices/macro/tbl/macro.html
+++ b/prices/macro/tbl/macro.html
@@ -115,7 +115,7 @@
       <td>-1.8</td>
     </tr>
     <tr>
-      <td>US2Y</td>
+      <td>US 2YR Bond</td>
       <td>4.3</td>
       <td>1.0</td>
       <td>0.3</td>
