--- a/prices/macro.html
+++ b/prices/macro.html
@@ -298,31 +298,31 @@ body {
 
 </script>
 <script>
-document.addEventListener("DOMContentLoaded", function () {
+function loadTable(tableContainer, tableFile) {
+    fetch(tableFile)
+    .then(response => response.text())
+    .then(data => {
+        document.getElementById(tableContainer).innerHTML = data;
+        applyNegativeNumberStyling(); // Ensure negative number styling runs AFTER table is loaded
+    })
+    .catch(error => console.error("Error loading table:", error));
+}
+
+function applyNegativeNumberStyling() {
     document.querySelectorAll(".styled-table td").forEach(cell => {
         let text = cell.textContent.trim();
         if (/^-?\d+(\.\d+)?$/.test(text) && parseFloat(text) < 0) {
             cell.classList.add("negative");
         }
     });
-});
+}
+
+// Load multiple tables dynamically
+loadTable("table-container-1", "macro/tbl/macro.html");
 
 </script>
 
-<!--table functions:-->
-<script>
-	function loadTable(tableContainer, tableFile) {
-		fetch(tableFile)
-		.then(response => response.text())
-		.then(data => {
-			document.getElementById(tableContainer).innerHTML = data;
-		})
-		.catch(error => console.error("Error loading table:", error));
-	}
 
-	// Load multiple tables dynamically
-	loadTable("table-container-1", "macro/tbl/macro.html");
-</script>
 <script>
     fetch('macro/tbl/timestamp.json')  // Fetch the JSON file
         .then(response => response.json()) 
