red numbers fixed

--- a/prices/macro.html
+++ b/prices/macro.html
@@ -234,7 +234,8 @@ body {
 	<div id="page-navbar-container">
 		<ul id="page-navbar"></ul>
 	</div>
-    <h1>Macro</h1>		
+    <h1>Morning Tables</h1>		
+	<H4 id="timestamp">Last updated:</h4>
 	<h2> Macro Instruments</H2>
     <div id="table-container-1"></div>
 	
