--- a/prices/macro.html
+++ b/prices/macro.html
@@ -239,6 +239,9 @@ body {
 	<h2> Macro Instruments</H2>
     <div id="table-container-1"></div>
 	
+	<h2>Liquid Hubs</H2>
+    <div id="table-container-1"></div>
+	
 
 
 <script>
@@ -320,6 +323,7 @@ function applyNegativeNumberStyling() {
 
 // Load multiple tables dynamically
 loadTable("table-container-1", "macro/tbl/macro.html");
+loadTable("table-container-1", "macro/tbl/liq_hubs.html");
 
 </script>
 
