--- a/prices/macro/tbl/liq_hubs.html
+++ b/prices/macro/tbl/liq_hubs.html
@@ -1,12 +1,12 @@
 <table border="1" class="dataframe styled-table">
   <thead>
     <tr>
-      <th>contract</th>
+      <th>Contract</th>
       <th colspan="2" halign="left">TTF</th>
-      <th colspan="2" halign="left">PSV</th>
-      <th colspan="2" halign="left">PEG</th>
-      <th colspan="2" halign="left">THE</th>
-      <th colspan="2" halign="left">CEGH</th>
+      <th colspan="2" halign="left">PSV/TTF</th>
+      <th colspan="2" halign="left">PEG/TTF</th>
+      <th colspan="2" halign="left">THE/TTF</th>
+      <th colspan="2" halign="left">CEGH/TTF</th>
     </tr>
     <tr>
       <th></th>
