illiquid hubs added

--- a/prices/macro.html
+++ b/prices/macro.html
@@ -242,6 +242,12 @@ body {
 	<h2>Liquid Hubs</H2>
     <div id="table-container-2"></div>
 	
+	<h2>Iliquid Hubs (Outright)</H2>
+    <div id="table-container-3"></div>
+	
+	<h2>Iliquid Hubs (vs TTF)</H2>
+    <div id="table-container-4"></div>
+	
 
 
 <script>
@@ -324,6 +330,8 @@ function applyNegativeNumberStyling() {
 // Load multiple tables dynamically
 loadTable("table-container-1", "macro/tbl/macro.html");
 loadTable("table-container-2", "macro/tbl/liq_hubs.html");
+loadTable("table-container-3", "macro/tbl/illiq_hubs_outright.html");
+loadTable("table-container-4", "macro/tbl/illiq_hubs_spread.html");
 
 </script>
 
