--- a/prices/macro.html
+++ b/prices/macro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Macro Tracker</title>
+    <title>Prices</title>
 	<link rel="stylesheet" href="../navbar.css">
 	<link rel="stylesheet" href="../secondary_navbar.css">
     <!-- Highcharts Scripts -->
