--- a/prices/macro/tbl/illiq_hubs_spread.html
+++ b/prices/macro/tbl/illiq_hubs_spread.html
@@ -1,25 +1,38 @@
 <table border="1" class="dataframe styled-table">
   <thead>
-    <tr style="text-align: right;">
+    <tr>
+      <th>hub</th>
       <th>product</th>
-      <th>(Bulgaria/TTF, Close)</th>
-      <th>(Bulgaria/TTF, DoD)</th>
-      <th>(Czech/TTF, Close)</th>
-      <th>(Czech/TTF, DoD)</th>
-      <th>(Greece/TTF, Close)</th>
-      <th>(Greece/TTF, DoD)</th>
-      <th>(Hungary/TTF, Close)</th>
-      <th>(Hungary/TTF, DoD)</th>
-      <th>(Poland/TTF, Close)</th>
-      <th>(Poland/TTF, DoD)</th>
-      <th>(Romania/TTF, Close)</th>
-      <th>(Romania/TTF, DoD)</th>
-      <th>(Slovakia/TTF, Close)</th>
-      <th>(Slovakia/TTF, DoD)</th>
+      <th colspan="2" halign="left">Bulgaria</th>
+      <th colspan="2" halign="left">Czech</th>
+      <th colspan="2" halign="left">Greece</th>
+      <th colspan="2" halign="left">Hungary</th>
+      <th colspan="2" halign="left">Poland</th>
+      <th colspan="2" halign="left">Romania</th>
+      <th colspan="2" halign="left">Slovakia</th>
+    </tr>
+    <tr>
+      <th></th>
+      <th></th>
+      <th>Close</th>
+      <th>DoD</th>
+      <th>Close</th>
+      <th>DoD</th>
+      <th>Close</th>
+      <th>DoD</th>
+      <th>Close</th>
+      <th>DoD</th>
+      <th>Close</th>
+      <th>DoD</th>
+      <th>Close</th>
+      <th>DoD</th>
+      <th>Close</th>
+      <th>DoD</th>
     </tr>
   </thead>
   <tbody>
     <tr>
+      <th></th>
       <td>D+1</td>
       <td>7.35</td>
       <td>4.16</td>
@@ -37,6 +50,7 @@
       <td>1.08</td>
     </tr>
     <tr>
+      <th></th>
       <td>M+1</td>
       <td>NaN</td>
       <td>NaN</td>
