--- a/prices/macro/tbl/illiq_hubs_spread.html
+++ b/prices/macro/tbl/illiq_hubs_spread.html
@@ -2,7 +2,7 @@
   <thead>
     <tr>
       <th>hub</th>
-      <th>product</th>
+      <th>index</th>
       <th colspan="2" halign="left">Bulgaria</th>
       <th colspan="2" halign="left">Czech</th>
       <th colspan="2" halign="left">Greece</th>
