--- a/prices/macro.html
+++ b/prices/macro.html
@@ -248,6 +248,11 @@ body {
 	<h2>Iliquid Hubs (vs TTF)</H2>
     <div id="table-container-4"></div>
 	
+	<h2>DA History</H2>
+    <div id="table-container-5"></div>
+	
+	<h2>DA Spreads History</H2>
+    <div id="table-container-6"></div>
 
 
 <script>
@@ -332,6 +337,8 @@ loadTable("table-container-1", "macro/tbl/macro.html");
 loadTable("table-container-2", "macro/tbl/liq_hubs.html");
 loadTable("table-container-3", "macro/tbl/illiq_hubs_outright.html");
 loadTable("table-container-4", "macro/tbl/illiq_hubs_spread.html");
+loadTable("table-container-5", "macro/tbl/da_hist.html");
+loadTable("table-container-6", "macro/tbl/da_spreads.html");
 
 </script>
 
