--- a/prices/macro/tbl/da_hist.html
+++ b/prices/macro/tbl/da_hist.html
@@ -1,28 +1,26 @@
 <table border="1" class="dataframe styled-table">
   <thead>
     <tr style="text-align: right;">
-      <th>date</th>
       <th>hub</th>
-      <th>2025-02-05 00:00:00</th>
-      <th>2025-02-06 00:00:00</th>
-      <th>2025-02-07 00:00:00</th>
-      <th>2025-02-08 00:00:00</th>
-      <th>2025-02-09 00:00:00</th>
-      <th>2025-02-10 00:00:00</th>
-      <th>2025-02-11 00:00:00</th>
-      <th>2025-02-12 00:00:00</th>
-      <th>2025-02-13 00:00:00</th>
-      <th>2025-02-14 00:00:00</th>
-      <th>2025-02-15 00:00:00</th>
-      <th>2025-02-16 00:00:00</th>
-      <th>2025-02-17 00:00:00</th>
-      <th>2025-02-18 00:00:00</th>
-      <th>2025-02-19 00:00:00</th>
+      <th>05-Feb</th>
+      <th>06-Feb</th>
+      <th>07-Feb</th>
+      <th>08-Feb</th>
+      <th>09-Feb</th>
+      <th>10-Feb</th>
+      <th>11-Feb</th>
+      <th>12-Feb</th>
+      <th>13-Feb</th>
+      <th>14-Feb</th>
+      <th>15-Feb</th>
+      <th>16-Feb</th>
+      <th>17-Feb</th>
+      <th>18-Feb</th>
+      <th>19-Feb</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th></th>
       <td>CEGH</td>
       <td>54.62</td>
       <td>55.58</td>
@@ -41,7 +39,6 @@
       <td>51.00</td>
     </tr>
     <tr>
-      <th></th>
       <td>PEG</td>
       <td>53.41</td>
       <td>54.11</td>
@@ -60,7 +57,6 @@
       <td>46.75</td>
     </tr>
     <tr>
-      <th></th>
       <td>PSV</td>
       <td>54.91</td>
       <td>56.72</td>
@@ -79,7 +75,6 @@
       <td>53.32</td>
     </tr>
     <tr>
-      <th></th>
       <td>THE</td>
       <td>54.54</td>
       <td>55.32</td>
@@ -98,7 +93,6 @@
       <td>49.18</td>
     </tr>
     <tr>
-      <th></th>
       <td>TTF</td>
       <td>53.70</td>
       <td>54.52</td>
@@ -117,7 +111,6 @@
       <td>47.64</td>
     </tr>
     <tr>
-      <th></th>
       <td>Bulgaria</td>
       <td>52.60</td>
       <td>57.19</td>
@@ -136,7 +129,6 @@
       <td>54.99</td>
     </tr>
     <tr>
-      <th></th>
       <td>Romania</td>
       <td>59.33</td>
       <td>62.96</td>
@@ -155,7 +147,6 @@
       <td>61.45</td>
     </tr>
     <tr>
-      <th></th>
       <td>Hungary</td>
       <td>54.42</td>
       <td>56.23</td>
@@ -174,7 +165,6 @@
       <td>53.29</td>
     </tr>
     <tr>
-      <th></th>
       <td>Czech</td>
       <td>55.48</td>
       <td>56.00</td>
@@ -193,7 +183,6 @@
       <td>50.90</td>
     </tr>
     <tr>
-      <th></th>
       <td>Greece</td>
       <td>51.58</td>
       <td>53.92</td>
@@ -212,7 +201,6 @@
       <td>64.12</td>
     </tr>
     <tr>
-      <th></th>
       <td>Slovakia</td>
       <td>54.63</td>
       <td>55.58</td>
@@ -231,7 +219,6 @@
       <td>53.50</td>
     </tr>
     <tr>
-      <th></th>
       <td>Poland</td>
       <td>57.44</td>
       <td>59.27</td>
