--- a/prices/macro/tbl/da_spreads.html
+++ b/prices/macro/tbl/da_spreads.html
@@ -1,28 +1,26 @@
 <table border="1" class="dataframe styled-table">
   <thead>
     <tr style="text-align: right;">
-      <th>date</th>
       <th>index</th>
-      <th>2025-02-05 00:00:00</th>
-      <th>2025-02-06 00:00:00</th>
-      <th>2025-02-07 00:00:00</th>
-      <th>2025-02-08 00:00:00</th>
-      <th>2025-02-09 00:00:00</th>
-      <th>2025-02-10 00:00:00</th>
-      <th>2025-02-11 00:00:00</th>
-      <th>2025-02-12 00:00:00</th>
-      <th>2025-02-13 00:00:00</th>
-      <th>2025-02-14 00:00:00</th>
-      <th>2025-02-15 00:00:00</th>
-      <th>2025-02-16 00:00:00</th>
-      <th>2025-02-17 00:00:00</th>
-      <th>2025-02-18 00:00:00</th>
-      <th>2025-02-19 00:00:00</th>
+      <th>05-Feb</th>
+      <th>06-Feb</th>
+      <th>07-Feb</th>
+      <th>08-Feb</th>
+      <th>09-Feb</th>
+      <th>10-Feb</th>
+      <th>11-Feb</th>
+      <th>12-Feb</th>
+      <th>13-Feb</th>
+      <th>14-Feb</th>
+      <th>15-Feb</th>
+      <th>16-Feb</th>
+      <th>17-Feb</th>
+      <th>18-Feb</th>
+      <th>19-Feb</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th></th>
       <td>TTF / THE</td>
       <td>-0.84</td>
       <td>-0.80</td>
@@ -41,7 +39,6 @@
       <td>-1.54</td>
     </tr>
     <tr>
-      <th></th>
       <td>TTF / CEGH</td>
       <td>-0.92</td>
       <td>-1.06</td>
@@ -60,7 +57,6 @@
       <td>-3.36</td>
     </tr>
     <tr>
-      <th></th>
       <td>TTF / Slovakia</td>
       <td>-0.93</td>
       <td>-1.06</td>
@@ -79,7 +75,6 @@
       <td>-5.86</td>
     </tr>
     <tr>
-      <th></th>
       <td>TTF / Hungary</td>
       <td>-0.72</td>
       <td>-1.71</td>
@@ -98,7 +93,6 @@
       <td>-5.65</td>
     </tr>
     <tr>
-      <th></th>
       <td>TTF / Romania</td>
       <td>-5.63</td>
       <td>-8.44</td>
@@ -117,7 +111,6 @@
       <td>-13.81</td>
     </tr>
     <tr>
-      <th></th>
       <td>TTF / Bulgaria</td>
       <td>1.10</td>
       <td>-2.67</td>
@@ -136,7 +129,6 @@
       <td>-7.35</td>
     </tr>
     <tr>
-      <th></th>
       <td>TTF / Greece</td>
       <td>2.12</td>
       <td>0.60</td>
@@ -155,7 +147,6 @@
       <td>-16.48</td>
     </tr>
     <tr>
-      <th></th>
       <td>CEGH / THE</td>
       <td>0.08</td>
       <td>0.26</td>
@@ -174,7 +165,6 @@
       <td>1.82</td>
     </tr>
     <tr>
-      <th></th>
       <td>CEGH / Hungary</td>
       <td>0.20</td>
       <td>-0.65</td>
@@ -193,7 +183,6 @@
       <td>-2.29</td>
     </tr>
     <tr>
-      <th></th>
       <td>Hungary / Romania</td>
       <td>-4.91</td>
       <td>-6.73</td>
@@ -212,7 +201,6 @@
       <td>-8.16</td>
     </tr>
     <tr>
-      <th></th>
       <td>Hungary / Bulgaria</td>
       <td>1.82</td>
       <td>-0.96</td>
@@ -231,7 +219,6 @@
       <td>-1.70</td>
     </tr>
     <tr>
-      <th></th>
       <td>Hungary / Greece</td>
       <td>2.84</td>
       <td>2.31</td>
@@ -250,7 +237,6 @@
       <td>-10.83</td>
     </tr>
     <tr>
-      <th></th>
       <td>Romania / Bulgaria</td>
       <td>6.73</td>
       <td>5.77</td>
@@ -269,7 +255,6 @@
       <td>6.46</td>
     </tr>
     <tr>
-      <th></th>
       <td>Bulgaria / Greece</td>
       <td>1.02</td>
       <td>3.27</td>
