--- a/prices/macro/tbl/da_hist.html
+++ b/prices/macro/tbl/da_hist.html
@@ -17,6 +17,8 @@
       <th>17-Feb</th>
       <th>18-Feb</th>
       <th>19-Feb</th>
+      <th>Average</th>
+      <th>DoD</th>
     </tr>
   </thead>
   <tbody>
@@ -37,6 +39,8 @@
       <td>53.55</td>
       <td>51.85</td>
       <td>51.00</td>
+      <td>55.34</td>
+      <td>-0.85</td>
     </tr>
     <tr>
       <td>PEG</td>
@@ -55,6 +59,8 @@
       <td>47.78</td>
       <td>48.72</td>
       <td>46.75</td>
+      <td>52.53</td>
+      <td>-1.97</td>
     </tr>
     <tr>
       <td>PSV</td>
@@ -73,6 +79,8 @@
       <td>55.32</td>
       <td>54.10</td>
       <td>53.32</td>
+      <td>56.60</td>
+      <td>-0.78</td>
     </tr>
     <tr>
       <td>THE</td>
@@ -91,6 +99,8 @@
       <td>49.76</td>
       <td>51.12</td>
       <td>49.18</td>
+      <td>54.14</td>
+      <td>-1.94</td>
     </tr>
     <tr>
       <td>TTF</td>
@@ -109,6 +119,8 @@
       <td>48.45</td>
       <td>49.56</td>
       <td>47.64</td>
+      <td>53.16</td>
+      <td>-1.92</td>
     </tr>
     <tr>
       <td>Bulgaria</td>
@@ -127,6 +139,8 @@
       <td>61.12</td>
       <td>52.75</td>
       <td>54.99</td>
+      <td>58.03</td>
+      <td>2.24</td>
     </tr>
     <tr>
       <td>Romania</td>
@@ -145,6 +159,8 @@
       <td>68.52</td>
       <td>59.88</td>
       <td>61.45</td>
+      <td>64.72</td>
+      <td>1.57</td>
     </tr>
     <tr>
       <td>Hungary</td>
@@ -163,6 +179,8 @@
       <td>54.04</td>
       <td>52.03</td>
       <td>53.29</td>
+      <td>55.90</td>
+      <td>1.26</td>
     </tr>
     <tr>
       <td>Czech</td>
@@ -181,6 +199,8 @@
       <td>51.95</td>
       <td>51.95</td>
       <td>50.90</td>
+      <td>54.86</td>
+      <td>-1.05</td>
     </tr>
     <tr>
       <td>Greece</td>
@@ -199,6 +219,8 @@
       <td>60.54</td>
       <td>63.78</td>
       <td>64.12</td>
+      <td>60.65</td>
+      <td>0.34</td>
     </tr>
     <tr>
       <td>Slovakia</td>
@@ -217,6 +239,8 @@
       <td>54.75</td>
       <td>54.35</td>
       <td>53.50</td>
+      <td>55.89</td>
+      <td>-0.85</td>
     </tr>
     <tr>
       <td>Poland</td>
@@ -235,6 +259,8 @@
       <td>60.49</td>
       <td>56.48</td>
       <td>58.68</td>
+      <td>60.42</td>
+      <td>2.20</td>
     </tr>
   </tbody>
 </table>
