--- a/prices/macro/tbl/da_spreads.html
+++ b/prices/macro/tbl/da_spreads.html
@@ -17,6 +17,8 @@
       <th>17-Feb</th>
       <th>18-Feb</th>
       <th>19-Feb</th>
+      <th>Average</th>
+      <th>DoD</th>
     </tr>
   </thead>
   <tbody>
@@ -37,6 +39,8 @@
       <td>-1.31</td>
       <td>-1.56</td>
       <td>-1.54</td>
+      <td>-0.90</td>
+      <td>0.64</td>
     </tr>
     <tr>
       <td>TTF / CEGH</td>
@@ -55,6 +59,8 @@
       <td>-5.10</td>
       <td>-2.29</td>
       <td>-3.36</td>
+      <td>-2.09</td>
+      <td>1.27</td>
     </tr>
     <tr>
       <td>TTF / Slovakia</td>
@@ -73,6 +79,8 @@
       <td>-6.30</td>
       <td>-4.79</td>
       <td>-5.86</td>
+      <td>-2.87</td>
+      <td>2.99</td>
     </tr>
     <tr>
       <td>TTF / Hungary</td>
@@ -91,6 +99,8 @@
       <td>-5.59</td>
       <td>-2.47</td>
       <td>-5.65</td>
+      <td>-2.77</td>
+      <td>2.88</td>
     </tr>
     <tr>
       <td>TTF / Romania</td>
@@ -109,6 +119,8 @@
       <td>-20.07</td>
       <td>-10.32</td>
       <td>-13.81</td>
+      <td>-10.22</td>
+      <td>3.59</td>
     </tr>
     <tr>
       <td>TTF / Bulgaria</td>
@@ -127,6 +139,8 @@
       <td>-12.67</td>
       <td>-3.19</td>
       <td>-7.35</td>
+      <td>-4.23</td>
+      <td>3.12</td>
     </tr>
     <tr>
       <td>TTF / Greece</td>
@@ -145,6 +159,8 @@
       <td>-12.09</td>
       <td>-14.22</td>
       <td>-16.48</td>
+      <td>-6.51</td>
+      <td>9.97</td>
     </tr>
     <tr>
       <td>CEGH / THE</td>
@@ -163,6 +179,8 @@
       <td>3.79</td>
       <td>0.73</td>
       <td>1.82</td>
+      <td>1.19</td>
+      <td>-0.63</td>
     </tr>
     <tr>
       <td>CEGH / Hungary</td>
@@ -181,6 +199,8 @@
       <td>-0.49</td>
       <td>-0.18</td>
       <td>-2.29</td>
+      <td>-0.68</td>
+      <td>1.61</td>
     </tr>
     <tr>
       <td>Hungary / Romania</td>
@@ -199,6 +219,8 @@
       <td>-14.48</td>
       <td>-7.85</td>
       <td>-8.16</td>
+      <td>-7.44</td>
+      <td>0.72</td>
     </tr>
     <tr>
       <td>Hungary / Bulgaria</td>
@@ -217,6 +239,8 @@
       <td>-7.08</td>
       <td>-0.72</td>
       <td>-1.70</td>
+      <td>-1.46</td>
+      <td>0.24</td>
     </tr>
     <tr>
       <td>Hungary / Greece</td>
@@ -235,6 +259,8 @@
       <td>-6.50</td>
       <td>-11.75</td>
       <td>-10.83</td>
+      <td>-3.73</td>
+      <td>7.10</td>
     </tr>
     <tr>
       <td>Romania / Bulgaria</td>
@@ -253,6 +279,8 @@
       <td>7.40</td>
       <td>7.13</td>
       <td>6.46</td>
+      <td>6.26</td>
+      <td>-0.20</td>
     </tr>
     <tr>
       <td>Bulgaria / Greece</td>
@@ -271,6 +299,8 @@
       <td>0.58</td>
       <td>-11.03</td>
       <td>-9.13</td>
+      <td>-2.36</td>
+      <td>6.77</td>
     </tr>
   </tbody>
 </table>
