--- a/prices/macro/tbl/illiq_hubs_outright.html
+++ b/prices/macro/tbl/illiq_hubs_outright.html
@@ -5,7 +5,7 @@
       <th>index</th>
       <th colspan="2" halign="left">Bulgaria</th>
       <th colspan="2" halign="left">Czech</th>
-      <th colspan="2" halign="left">Greece</th>
+      <th>Greece</th>
       <th colspan="2" halign="left">Hungary</th>
       <th colspan="2" halign="left">Poland</th>
       <th colspan="2" halign="left">Romania</th>
@@ -18,7 +18,6 @@
       <th>DoD</th>
       <th>Close</th>
       <th>DoD</th>
-      <th>Close</th>
       <th>DoD</th>
       <th>Close</th>
       <th>DoD</th>
@@ -34,38 +33,36 @@
     <tr>
       <th></th>
       <td>D+1</td>
-      <td>54.99</td>
-      <td>2.24</td>
-      <td>50.90</td>
-      <td>-1.05</td>
-      <td>64.12</td>
-      <td>0.34</td>
-      <td>53.29</td>
-      <td>1.26</td>
-      <td>58.68</td>
-      <td>2.20</td>
-      <td>61.45</td>
-      <td>1.57</td>
-      <td>53.5</td>
-      <td>-0.85</td>
+      <td>52.31</td>
+      <td>-2.68</td>
+      <td>50.20</td>
+      <td>-0.70</td>
+      <td></td>
+      <td>51.55</td>
+      <td>-1.74</td>
+      <td>57.27</td>
+      <td>-1.41</td>
+      <td>59.0</td>
+      <td>-2.45</td>
+      <td>52.09</td>
+      <td>-1.41</td>
     </tr>
     <tr>
       <th></th>
       <td>M+1</td>
       <td></td>
       <td></td>
-      <td>49.99</td>
-      <td>-0.95</td>
+      <td>49.36</td>
+      <td>-0.64</td>
       <td></td>
       <td></td>
-      <td>50.34</td>
-      <td>-0.45</td>
-      <td>54.19</td>
-      <td>2.22</td>
+      <td></td>
+      <td>53.04</td>
+      <td>-1.15</td>
       <td></td>
       <td></td>
-      <td>51.4</td>
-      <td>-1.85</td>
+      <td>51.31</td>
+      <td>-0.09</td>
     </tr>
   </tbody>
 </table>
