--- a/prices/macro/tbl/illiq_hubs_spread.html
+++ b/prices/macro/tbl/illiq_hubs_spread.html
@@ -5,7 +5,7 @@
       <th>index</th>
       <th colspan="2" halign="left">Bulgaria</th>
       <th colspan="2" halign="left">Czech</th>
-      <th colspan="2" halign="left">Greece</th>
+      <th>Greece</th>
       <th colspan="2" halign="left">Hungary</th>
       <th colspan="2" halign="left">Poland</th>
       <th colspan="2" halign="left">Romania</th>
@@ -18,7 +18,6 @@
       <th>DoD</th>
       <th>Close</th>
       <th>DoD</th>
-      <th>Close</th>
       <th>DoD</th>
       <th>Close</th>
       <th>DoD</th>
@@ -34,20 +33,19 @@
     <tr>
       <th></th>
       <td>D+1</td>
-      <td>7.35</td>
-      <td>4.16</td>
-      <td>3.26</td>
-      <td>0.88</td>
-      <td>16.48</td>
-      <td>2.27</td>
-      <td>5.65</td>
-      <td>3.19</td>
-      <td>11.04</td>
-      <td>4.12</td>
-      <td>13.81</td>
-      <td>3.49</td>
-      <td>5.86</td>
-      <td>1.08</td>
+      <td>5.29</td>
+      <td>-2.07</td>
+      <td>3.18</td>
+      <td>-0.09</td>
+      <td></td>
+      <td>4.52</td>
+      <td>-1.13</td>
+      <td>10.24</td>
+      <td>-0.79</td>
+      <td>11.97</td>
+      <td>-1.83</td>
+      <td>5.06</td>
+      <td>-0.80</td>
     </tr>
     <tr>
       <th></th>
@@ -58,14 +56,13 @@
       <td>0.01</td>
       <td></td>
       <td></td>
-      <td>2.11</td>
-      <td>0.51</td>
-      <td>5.96</td>
-      <td>3.18</td>
+      <td></td>
+      <td>5.46</td>
+      <td>-0.50</td>
       <td></td>
       <td></td>
-      <td>3.17</td>
-      <td>-0.89</td>
+      <td>3.73</td>
+      <td>0.56</td>
     </tr>
   </tbody>
 </table>
