--- a/prices/macro/tbl/illiq_hubs_outright.html
+++ b/prices/macro/tbl/illiq_hubs_outright.html
@@ -5,7 +5,7 @@
       <th>index</th>
       <th colspan="2" halign="left">Bulgaria</th>
       <th colspan="2" halign="left">Czech</th>
-      <th>Greece</th>
+      <th colspan="2" halign="left">Greece</th>
       <th colspan="2" halign="left">Hungary</th>
       <th colspan="2" halign="left">Poland</th>
       <th colspan="2" halign="left">Romania</th>
@@ -18,6 +18,7 @@
       <th>DoD</th>
       <th>Close</th>
       <th>DoD</th>
+      <th>Close</th>
       <th>DoD</th>
       <th>Close</th>
       <th>DoD</th>
@@ -37,7 +38,8 @@
       <td>-2.68</td>
       <td>50.20</td>
       <td>-0.70</td>
-      <td></td>
+      <td>54.47</td>
+      <td>-9.65</td>
       <td>51.55</td>
       <td>-1.74</td>
       <td>57.27</td>
@@ -54,6 +56,7 @@
       <td></td>
       <td>49.36</td>
       <td>-0.64</td>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
