--- a/prices/macro/tbl/illiq_hubs_spread.html
+++ b/prices/macro/tbl/illiq_hubs_spread.html
@@ -5,7 +5,7 @@
       <th>index</th>
       <th colspan="2" halign="left">Bulgaria</th>
       <th colspan="2" halign="left">Czech</th>
-      <th>Greece</th>
+      <th colspan="2" halign="left">Greece</th>
       <th colspan="2" halign="left">Hungary</th>
       <th colspan="2" halign="left">Poland</th>
       <th colspan="2" halign="left">Romania</th>
@@ -18,6 +18,7 @@
       <th>DoD</th>
       <th>Close</th>
       <th>DoD</th>
+      <th>Close</th>
       <th>DoD</th>
       <th>Close</th>
       <th>DoD</th>
@@ -37,7 +38,8 @@
       <td>-2.07</td>
       <td>3.18</td>
       <td>-0.09</td>
-      <td></td>
+      <td>7.44</td>
+      <td>-9.04</td>
       <td>4.52</td>
       <td>-1.13</td>
       <td>10.24</td>
@@ -54,6 +56,7 @@
       <td></td>
       <td>1.77</td>
       <td>0.01</td>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
