--- a/prices/macro/tbl/da_hist.html
+++ b/prices/macro/tbl/da_hist.html
@@ -2,6 +2,31 @@
   <thead>
     <tr style="text-align: right;">
       <th>hub</th>
+      <th>17-Jan</th>
+      <th>18-Jan</th>
+      <th>19-Jan</th>
+      <th>20-Jan</th>
+      <th>21-Jan</th>
+      <th>22-Jan</th>
+      <th>23-Jan</th>
+      <th>24-Jan</th>
+      <th>25-Jan</th>
+      <th>26-Jan</th>
+      <th>27-Jan</th>
+      <th>28-Jan</th>
+      <th>29-Jan</th>
+      <th>30-Jan</th>
+      <th>31-Jan</th>
+      <th>01-Feb</th>
+      <th>02-Feb</th>
+      <th>03-Feb</th>
+      <th>04-Feb</th>
+      <th>05-Feb</th>
+      <th>06-Feb</th>
+      <th>07-Feb</th>
+      <th>08-Feb</th>
+      <th>09-Feb</th>
+      <th>10-Feb</th>
       <th>11-Feb</th>
       <th>12-Feb</th>
       <th>13-Feb</th>
@@ -19,6 +44,31 @@
   <tbody>
     <tr>
       <td>TTF</td>
+      <td>48.4</td>
+      <td></td>
+      <td></td>
+      <td>49.54</td>
+      <td>50.36</td>
+      <td>48.69</td>
+      <td>48.68</td>
+      <td>49.46</td>
+      <td></td>
+      <td></td>
+      <td>47.71</td>
+      <td>48.35</td>
+      <td>51.41</td>
+      <td>51.9</td>
+      <td>53.66</td>
+      <td></td>
+      <td></td>
+      <td>53.98</td>
+      <td>52.02</td>
+      <td>53.70</td>
+      <td>54.52</td>
+      <td>55.64</td>
+      <td></td>
+      <td></td>
+      <td>58.36</td>
       <td>57.58</td>
       <td>55.95</td>
       <td>51.89</td>
@@ -29,11 +79,36 @@
       <td>49.56</td>
       <td>47.64</td>
       <td>47.02</td>
-      <td>51.20</td>
+      <td>51.44</td>
       <td>-0.62</td>
     </tr>
     <tr>
       <td>NBP</td>
+      <td>49.7</td>
+      <td></td>
+      <td></td>
+      <td>52.04</td>
+      <td>52.36</td>
+      <td>50.12</td>
+      <td>50.24</td>
+      <td>50.74</td>
+      <td></td>
+      <td></td>
+      <td>49.21</td>
+      <td>50.01</td>
+      <td>53.61</td>
+      <td>53.69</td>
+      <td>54.26</td>
+      <td></td>
+      <td></td>
+      <td>55.30</td>
+      <td>54.32</td>
+      <td>55.02</td>
+      <td>55.45</td>
+      <td>56.15</td>
+      <td></td>
+      <td></td>
+      <td>59.39</td>
       <td>58.60</td>
       <td>56.48</td>
       <td>52.54</td>
@@ -44,11 +119,36 @@
       <td>48.71</td>
       <td>46.80</td>
       <td>46.42</td>
-      <td>51.20</td>
+      <td>52.45</td>
       <td>-0.38</td>
     </tr>
     <tr>
       <td>THE</td>
+      <td>48.29</td>
+      <td></td>
+      <td></td>
+      <td>49.49</td>
+      <td>51.1</td>
+      <td>49.94</td>
+      <td>49.81</td>
+      <td>50.66</td>
+      <td></td>
+      <td></td>
+      <td>48.6</td>
+      <td>49.06</td>
+      <td>52.02</td>
+      <td>52.5</td>
+      <td>54.09</td>
+      <td></td>
+      <td></td>
+      <td>54.70</td>
+      <td>53.04</td>
+      <td>54.54</td>
+      <td>55.32</td>
+      <td>56.60</td>
+      <td></td>
+      <td></td>
+      <td>59.19</td>
       <td>58.36</td>
       <td>56.84</td>
       <td>52.59</td>
@@ -59,11 +159,36 @@
       <td>51.12</td>
       <td>49.18</td>
       <td>48.32</td>
-      <td>52.28</td>
+      <td>52.29</td>
       <td>-0.86</td>
     </tr>
     <tr>
       <td>PEG</td>
+      <td>47.74</td>
+      <td></td>
+      <td></td>
+      <td>49.5</td>
+      <td>50.26</td>
+      <td>48.26</td>
+      <td>48.28</td>
+      <td>49.05</td>
+      <td></td>
+      <td></td>
+      <td>47.39</td>
+      <td>47.89</td>
+      <td>50.76</td>
+      <td>51.21</td>
+      <td>52.5</td>
+      <td></td>
+      <td></td>
+      <td>53.16</td>
+      <td>51.82</td>
+      <td>53.41</td>
+      <td>54.11</td>
+      <td>54.64</td>
+      <td></td>
+      <td></td>
+      <td>57.85</td>
       <td>57.46</td>
       <td>55.60</td>
       <td>50.66</td>
@@ -74,11 +199,36 @@
       <td>48.72</td>
       <td>46.75</td>
       <td>46.69</td>
-      <td>50.56</td>
+      <td>50.89</td>
       <td>-0.06</td>
     </tr>
     <tr>
       <td>PSV</td>
+      <td>50.2</td>
+      <td></td>
+      <td></td>
+      <td>52.52</td>
+      <td>52.49</td>
+      <td>50.84</td>
+      <td>50.3</td>
+      <td>50.38</td>
+      <td></td>
+      <td></td>
+      <td>48.54</td>
+      <td>49.15</td>
+      <td>51.5</td>
+      <td>52.2</td>
+      <td>54.52</td>
+      <td></td>
+      <td></td>
+      <td>54.38</td>
+      <td>53.10</td>
+      <td>54.91</td>
+      <td>56.72</td>
+      <td>57.55</td>
+      <td></td>
+      <td></td>
+      <td>61.15</td>
       <td>61.30</td>
       <td>58.58</td>
       <td>54.62</td>
@@ -89,11 +239,36 @@
       <td>54.10</td>
       <td>53.32</td>
       <td>51.46</td>
-      <td>55.47</td>
+      <td>53.77</td>
       <td>-1.86</td>
     </tr>
     <tr>
       <td>CEGH</td>
+      <td>49.0</td>
+      <td></td>
+      <td></td>
+      <td>49.71</td>
+      <td>51.74</td>
+      <td>49.91</td>
+      <td>50.29</td>
+      <td>51.08</td>
+      <td></td>
+      <td></td>
+      <td>49.39</td>
+      <td>49.5</td>
+      <td>52.31</td>
+      <td>53.05</td>
+      <td>54.12</td>
+      <td></td>
+      <td></td>
+      <td>54.85</td>
+      <td>53.05</td>
+      <td>54.62</td>
+      <td>55.58</td>
+      <td>56.80</td>
+      <td></td>
+      <td></td>
+      <td>60.38</td>
       <td>60.30</td>
       <td>57.42</td>
       <td>53.69</td>
@@ -104,11 +279,36 @@
       <td>51.85</td>
       <td>51.00</td>
       <td>49.59</td>
-      <td>53.87</td>
+      <td>53.05</td>
       <td>-1.41</td>
     </tr>
     <tr>
       <td>Hungary</td>
+      <td>47.72</td>
+      <td></td>
+      <td></td>
+      <td>47.88</td>
+      <td>48.6</td>
+      <td>49.47</td>
+      <td>48.81</td>
+      <td>48.49</td>
+      <td></td>
+      <td></td>
+      <td>47.39</td>
+      <td>47.68</td>
+      <td>50.11</td>
+      <td>51.59</td>
+      <td>53.33</td>
+      <td></td>
+      <td></td>
+      <td>54.61</td>
+      <td>53.19</td>
+      <td>54.42</td>
+      <td>56.23</td>
+      <td>56.65</td>
+      <td></td>
+      <td></td>
+      <td>59.94</td>
       <td>61.88</td>
       <td>58.36</td>
       <td>54.59</td>
@@ -119,11 +319,36 @@
       <td>52.03</td>
       <td>53.29</td>
       <td>51.55</td>
-      <td>54.90</td>
+      <td>52.61</td>
       <td>-1.74</td>
     </tr>
     <tr>
       <td>Czech</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>54.25</td>
+      <td>55.48</td>
+      <td>55.48</td>
+      <td>56.00</td>
+      <td>57.60</td>
+      <td></td>
+      <td></td>
+      <td>60.50</td>
       <td>59.00</td>
       <td>53.55</td>
       <td>53.55</td>
@@ -134,11 +359,36 @@
       <td>51.95</td>
       <td>50.90</td>
       <td>50.20</td>
-      <td>53.01</td>
+      <td>54.53</td>
       <td>-0.70</td>
     </tr>
     <tr>
       <td>Poland</td>
+      <td>51.64</td>
+      <td>52.5</td>
+      <td>53.19</td>
+      <td>51.6</td>
+      <td>53.09</td>
+      <td>54.53</td>
+      <td>54.39</td>
+      <td>53.08</td>
+      <td>53.19</td>
+      <td>53.05</td>
+      <td>52.82</td>
+      <td>52.97</td>
+      <td>54.21</td>
+      <td>56.5</td>
+      <td>57.49</td>
+      <td>58.6</td>
+      <td>58.73</td>
+      <td>58.87</td>
+      <td>57.51</td>
+      <td>57.44</td>
+      <td>59.27</td>
+      <td>59.55</td>
+      <td>61.14</td>
+      <td>60.91</td>
+      <td>63.09</td>
       <td>64.71</td>
       <td>62.01</td>
       <td>60.13</td>
@@ -149,11 +399,36 @@
       <td>56.48</td>
       <td>58.68</td>
       <td>57.27</td>
-      <td>60.21</td>
+      <td>57.18</td>
       <td>-1.41</td>
     </tr>
     <tr>
       <td>Slovakia</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>53.85</td>
+      <td>53.05</td>
+      <td>54.63</td>
+      <td>55.58</td>
+      <td>56.80</td>
+      <td>57.16</td>
+      <td>57.16</td>
+      <td>60.38</td>
       <td>60.30</td>
       <td>58.33</td>
       <td>54.89</td>
@@ -164,11 +439,36 @@
       <td>54.35</td>
       <td>53.50</td>
       <td>52.09</td>
-      <td>54.87</td>
+      <td>55.41</td>
       <td>-1.41</td>
     </tr>
     <tr>
       <td>Romania</td>
+      <td>57.37</td>
+      <td>48.31</td>
+      <td>47.37</td>
+      <td>48.53</td>
+      <td>49.25</td>
+      <td>50.72</td>
+      <td>47.88</td>
+      <td>46.37</td>
+      <td>45.35</td>
+      <td>45.66</td>
+      <td>46.2</td>
+      <td>46.66</td>
+      <td>49.46</td>
+      <td>50.09</td>
+      <td>49.73</td>
+      <td>51.38</td>
+      <td>55.67</td>
+      <td>63.05</td>
+      <td>58.87</td>
+      <td>59.33</td>
+      <td>62.96</td>
+      <td>62.51</td>
+      <td>62.87</td>
+      <td>67.82</td>
+      <td>83.22</td>
       <td>73.51</td>
       <td>61.86</td>
       <td>54.46</td>
@@ -179,11 +479,36 @@
       <td>59.88</td>
       <td>61.45</td>
       <td>59.00</td>
-      <td>63.10</td>
+      <td>56.79</td>
       <td>-2.45</td>
     </tr>
     <tr>
       <td>Bulgaria</td>
+      <td>51.91</td>
+      <td>51.83</td>
+      <td>46.01</td>
+      <td>46.75</td>
+      <td>47.51</td>
+      <td>47.91</td>
+      <td>46.0</td>
+      <td>45.24</td>
+      <td>45.22</td>
+      <td>44.21</td>
+      <td>42.7</td>
+      <td>42.01</td>
+      <td>44.75</td>
+      <td>46.96</td>
+      <td>46.22</td>
+      <td>46.29</td>
+      <td>50.04</td>
+      <td>55.83</td>
+      <td>51.40</td>
+      <td>52.60</td>
+      <td>57.19</td>
+      <td>58.20</td>
+      <td>57.54</td>
+      <td>64.81</td>
+      <td>76.80</td>
       <td>65.54</td>
       <td>52.56</td>
       <td>49.61</td>
@@ -194,11 +519,36 @@
       <td>52.75</td>
       <td>54.99</td>
       <td>52.31</td>
-      <td>55.56</td>
+      <td>52.04</td>
       <td>-2.68</td>
     </tr>
     <tr>
       <td>Greece</td>
+      <td>45.0</td>
+      <td>45.66</td>
+      <td>45.6</td>
+      <td>46.76</td>
+      <td>48.53</td>
+      <td>52.61</td>
+      <td>48.85</td>
+      <td>47.18</td>
+      <td>44.14</td>
+      <td>43.98</td>
+      <td>43.27</td>
+      <td>44.09</td>
+      <td>45.3</td>
+      <td>47.53</td>
+      <td></td>
+      <td>48.02</td>
+      <td>51.81</td>
+      <td>50.81</td>
+      <td>51.00</td>
+      <td>51.58</td>
+      <td>53.92</td>
+      <td>53.00</td>
+      <td>59.42</td>
+      <td>66.91</td>
+      <td>69.57</td>
       <td>62.74</td>
       <td>61.63</td>
       <td>59.79</td>
@@ -209,7 +559,7 @@
       <td>63.78</td>
       <td>64.12</td>
       <td>54.47</td>
-      <td>60.98</td>
+      <td>53.36</td>
       <td>-9.65</td>
     </tr>
   </tbody>
