--- a/prices/macro.html
+++ b/prices/macro.html
@@ -253,6 +253,19 @@ body {
 	
 	<h2>DA Spreads History</H2>
     <div id="table-container-6"></div>
+	
+	<H1>Flows</H1>
+	<h2>EU Key Supply Sources</H2>
+    <div id="table-container-7"></div>
+	
+	<h2>Regas per Country</H2>
+    <div id="table-container-8"></div>
+	
+	<h2>Ukraine Imports</H2>
+    <div id="table-container-9"></div>
+	
+	<h2>US Liquefaction</H2>
+    <div id="table-container-10"></div>
 
 
 <script>
