--- a/prices/macro.html
+++ b/prices/macro.html
@@ -353,6 +353,16 @@ loadTable("table-container-4", "macro/tbl/illiq_hubs_spread.html");
 loadTable("table-container-5", "macro/tbl/da_hist.html");
 loadTable("table-container-6", "macro/tbl/da_spreads.html");
 
+loadTable("table-container-7", "macro/tbl/eusupply.html");
+loadTable("table-container-8", "macro/tbl/lngregas.html");
+loadTable("table-container-9", "macro/tbl/uaimport.html");
+loadTable("table-container-10", "macro/tbl/usfeed.html");
+
+
+
+
+
+
 </script>
 
 
