--- a/prices/macro/tbl/liq_hubs.html
+++ b/prices/macro/tbl/liq_hubs.html
@@ -10,15 +10,15 @@
     </tr>
     <tr>
       <th></th>
-      <th>Close</th>
+      <th>20-Feb</th>
       <th>DoD</th>
-      <th>Close</th>
+      <th>20-Feb</th>
       <th>DoD</th>
-      <th>Close</th>
+      <th>20-Feb</th>
       <th>DoD</th>
-      <th>Close</th>
+      <th>20-Feb</th>
       <th>DoD</th>
-      <th>Close</th>
+      <th>20-Feb</th>
       <th>DoD</th>
     </tr>
   </thead>
