--- a/prices/macro/tbl/illiq_hubs_spread.html
+++ b/prices/macro/tbl/illiq_hubs_spread.html
@@ -14,19 +14,19 @@
     <tr>
       <th></th>
       <th></th>
-      <th>Close</th>
+      <th>20-Feb</th>
       <th>DoD</th>
-      <th>Close</th>
+      <th>20-Feb</th>
       <th>DoD</th>
-      <th>Close</th>
+      <th>20-Feb</th>
       <th>DoD</th>
-      <th>Close</th>
+      <th>20-Feb</th>
       <th>DoD</th>
-      <th>Close</th>
+      <th>20-Feb</th>
       <th>DoD</th>
-      <th>Close</th>
+      <th>20-Feb</th>
       <th>DoD</th>
-      <th>Close</th>
+      <th>20-Feb</th>
       <th>DoD</th>
     </tr>
   </thead>
