--- a/prices/macro/tbl/macro.html
+++ b/prices/macro/tbl/macro.html
@@ -3,6 +3,7 @@
     <tr style="text-align: right;">
       <th>index</th>
       <th>Price</th>
+      <th>20-Feb</th>
       <th>DoD %</th>
       <th>WoW %</th>
       <th>MoM %</th>
@@ -12,6 +13,7 @@
   <tbody>
     <tr>
       <td>TTF</td>
+      <td>38.385</td>
       <td>38.38</td>
       <td>-0.2</td>
       <td>-6.2</td>
@@ -20,6 +22,7 @@
     </tr>
     <tr>
       <td>EUA</td>
+      <td>72.670</td>
       <td>72.67</td>
       <td>-1.8</td>
       <td>-6.9</td>
@@ -28,6 +31,7 @@
     </tr>
     <tr>
       <td>DE Baseload</td>
+      <td>87.650</td>
       <td>87.65</td>
       <td>-1.1</td>
       <td>-7.1</td>
@@ -36,6 +40,7 @@
     </tr>
     <tr>
       <td>API2</td>
+      <td>99.900</td>
       <td>99.9</td>
       <td>-0.5</td>
       <td>-1.8</td>
@@ -44,6 +49,7 @@
     </tr>
     <tr>
       <td>Brent</td>
+      <td>76.480</td>
       <td>76.48</td>
       <td>0.6</td>
       <td>1.9</td>
@@ -52,6 +58,7 @@
     </tr>
     <tr>
       <td>US 2YR Bond</td>
+      <td>4.269</td>
       <td>4.27</td>
       <td>-0.0</td>
       <td>-0.9</td>
@@ -60,6 +67,7 @@
     </tr>
     <tr>
       <td>EUR/USD</td>
+      <td>1.050</td>
       <td>1.05</td>
       <td>0.8</td>
       <td>0.3</td>
@@ -68,6 +76,7 @@
     </tr>
     <tr>
       <td>S&amp;P500</td>
+      <td>6117.520</td>
       <td>6117</td>
       <td>-0.4</td>
       <td>0.0</td>
@@ -76,6 +85,7 @@
     </tr>
     <tr>
       <td>DAX</td>
+      <td>22314.650</td>
       <td>22314</td>
       <td>-0.5</td>
       <td>-1.3</td>
@@ -84,6 +94,7 @@
     </tr>
     <tr>
       <td>Gold</td>
+      <td>2956.100</td>
       <td>2956</td>
       <td>0.7</td>
       <td>0.4</td>
@@ -92,6 +103,7 @@
     </tr>
     <tr>
       <td>Copper</td>
+      <td>4.612</td>
       <td>4.61</td>
       <td>1.1</td>
       <td>-3.5</td>
@@ -100,6 +112,7 @@
     </tr>
     <tr>
       <td>DXY</td>
+      <td>106.370</td>
       <td>106.37</td>
       <td>-0.7</td>
       <td>-0.9</td>
@@ -108,6 +121,7 @@
     </tr>
     <tr>
       <td>China CSI 300</td>
+      <td>3928.900</td>
       <td>3928</td>
       <td>-0.3</td>
       <td>0.6</td>
@@ -116,6 +130,7 @@
     </tr>
     <tr>
       <td>Bitcoin</td>
+      <td>98310.300</td>
       <td>98310</td>
       <td>1.7</td>
       <td>1.8</td>
@@ -124,6 +139,7 @@
     </tr>
     <tr>
       <td>VIX</td>
+      <td>15.660</td>
       <td>15.66</td>
       <td>2.6</td>
       <td>3.7</td>
