--- a/prices/macro.html
+++ b/prices/macro.html
@@ -266,6 +266,12 @@ body {
 	
 	<h2>US Liquefaction</H2>
     <div id="table-container-10"></div>
+	
+	<H1>Balance</H1>
+		
+	<h2>Bulgaria Balance</H2>
+    <div id="table-container-11"></div>
+
 
 
 <script>
@@ -358,6 +364,7 @@ loadTable("table-container-8", "macro/tbl/lngregas.html");
 loadTable("table-container-9", "macro/tbl/uaimport.html");
 loadTable("table-container-10", "macro/tbl/usfeed.html");
 
+loadTable("table-container-11", "macro/tbl/bg_bal.html");
 
 
 
