--- a/prices/macro/tbl/liq_hubs.html
+++ b/prices/macro/tbl/liq_hubs.html
@@ -1,7 +1,7 @@
 <table border="1" class="dataframe styled-table">
   <thead>
     <tr>
-      <th>Contract</th>
+      <th>index</th>
       <th colspan="2" halign="left">TTF</th>
       <th colspan="2" halign="left">PSV/TTF</th>
       <th colspan="2" halign="left">PEG/TTF</th>
@@ -23,6 +23,19 @@
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <td>DA</td>
+      <td>46.0</td>
+      <td>-1.025</td>
+      <td>3.0</td>
+      <td>-1.438</td>
+      <td>-0.662</td>
+      <td>-0.325</td>
+      <td>0.963</td>
+      <td>-0.337</td>
+      <td>2.288</td>
+      <td>-0.275</td>
+    </tr>
     <tr>
       <td>March-2025</td>
       <td>47.14</td>
@@ -53,8 +66,8 @@
       <td>May-2025</td>
       <td>47.47</td>
       <td>-0.25</td>
-      <td>1.10</td>
-      <td>0.00</td>
+      <td>1.1</td>
+      <td>0.0</td>
       <td>-0.92</td>
       <td>0.35</td>
       <td>0.76</td>
@@ -65,13 +78,13 @@
     <tr>
       <td>Q2-2025</td>
       <td>47.43</td>
-      <td>-0.30</td>
+      <td>-0.3</td>
       <td>1.11</td>
       <td>-0.19</td>
       <td>-0.94</td>
       <td>0.08</td>
       <td>0.74</td>
-      <td>-0.20</td>
+      <td>-0.2</td>
       <td>1.24</td>
       <td>-0.13</td>
     </tr>
@@ -95,7 +108,7 @@
       <td>1.34</td>
       <td>0.29</td>
       <td>-1.23</td>
-      <td>-0.00</td>
+      <td>-0.0</td>
       <td>1.55</td>
       <td>0.19</td>
       <td>1.96</td>
@@ -116,12 +129,12 @@
     </tr>
     <tr>
       <td>Winter-2025</td>
-      <td>45.30</td>
+      <td>45.3</td>
       <td>0.03</td>
       <td>1.34</td>
       <td>0.15</td>
       <td>-1.05</td>
-      <td>0.00</td>
+      <td>0.0</td>
       <td>1.51</td>
       <td>0.04</td>
       <td>1.87</td>
@@ -133,9 +146,9 @@
       <td>0.07</td>
       <td>1.36</td>
       <td>-0.06</td>
-      <td>-0.70</td>
-      <td>-0.00</td>
-      <td>1.30</td>
+      <td>-0.7</td>
+      <td>-0.0</td>
+      <td>1.3</td>
       <td>-0.01</td>
       <td>1.77</td>
       <td>-0.04</td>
@@ -145,7 +158,7 @@
       <td>31.52</td>
       <td>0.09</td>
       <td>1.59</td>
-      <td>0.00</td>
+      <td>0.0</td>
       <td>-0.45</td>
       <td>0.02</td>
       <td>1.36</td>
