--- a/navbar.html
+++ b/navbar.html
@@ -39,8 +39,8 @@
     <div class="menu-item">
         <a href="#">Weather</a>
         <div class="submenu">
-            <a href="/d_dash/test/wx_temps.html">Test</a>
-            <a href="/d_dash/test/wx_temps.html">Test2</a>
+            <a href="/d_dash/wx/ecens_evo.html">EC ENS Evo</a>
+            <!--a href="/d_dash/test/wx_temps.html">Test2</a> -->
         </div>
     </div>
 
