--- a/wx/ecens_evo_anom.html
+++ b/wx/ecens_evo_anom.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EC ENS Evolution (Absolute)</title>
+    <title>EC ENS Evolution (Anomaly)</title>
 	<link rel="stylesheet" href="../navbar.css">
 	<link rel="stylesheet" href="../secondary_navbar.css">
     <!-- Highcharts Scripts -->
@@ -232,9 +232,9 @@ body {
 	<div id="page-navbar-container">
 		<ul id="page-navbar"></ul>
 	</div>
-    <h1>EC Ensemble Evolution</h1>
+    <h1>EC Ensemble Evolution (Anomaly)</h1>
 	<H4 id="timestamp">Last updated:</h4>
-	<p>Columns represent forecast issue date. Rows represent weather delivery date. Think of it as, for a fixed row, left to right tells you the timeline of how the forecast for that day evolves. Temps quoted in degrees Celsius. Numbers shown here are absolute temps. </p>
+	<p>Columns represent forecast issue date. Rows represent weather delivery date. Think of it as, for a fixed row, left to right tells you the timeline of how the forecast for that day evolves. Temps quoted in degrees Celsius. Numbers shown here are the anomaly (that is, the difference to normal). </p>
 	
 
 	<h2>Germany</h2>
@@ -361,22 +361,22 @@ body {
 	}
 
 	// Load multiple tables dynamically
-	loadTable("table-container-1", "ecens_evo/tbl/FR.html");
-	loadTable("table-container-2", "ecens_evo/tbl/AT.html");
-	loadTable("table-container-3", "ecens_evo/tbl/BE.html");
-	loadTable("table-container-4", "ecens_evo/tbl/BG.html");
-	loadTable("table-container-5", "ecens_evo/tbl/CH.html");
-	loadTable("table-container-6", "ecens_evo/tbl/CZ.html");
-	loadTable("table-container-7", "ecens_evo/tbl/DE.html");
-	loadTable("table-container-8", "ecens_evo/tbl/GR.html");
-	loadTable("table-container-9", "ecens_evo/tbl/HR.html");
-	loadTable("table-container-10", "ecens_evo/tbl/HU.html");
-	loadTable("table-container-11", "ecens_evo/tbl/IT.html");
-	loadTable("table-container-12", "ecens_evo/tbl/NL.html");
-	loadTable("table-container-13", "ecens_evo/tbl/PL.html");
-	loadTable("table-container-14", "ecens_evo/tbl/RO.html");
-	loadTable("table-container-15", "ecens_evo/tbl/SI.html");
-	loadTable("table-container-16", "ecens_evo/tbl/SK.html");
+	loadTable("table-container-1", "ecens_evo_anom/tbl/FR.html");
+	loadTable("table-container-2", "ecens_evo_anom/tbl/AT.html");
+	loadTable("table-container-3", "ecens_evo_anom/tbl/BE.html");
+	loadTable("table-container-4", "ecens_evo_anom/tbl/BG.html");
+	loadTable("table-container-5", "ecens_evo_anom/tbl/CH.html");
+	loadTable("table-container-6", "ecens_evo_anom/tbl/CZ.html");
+	loadTable("table-container-7", "ecens_evo_anom/tbl/DE.html");
+	loadTable("table-container-8", "ecens_evo_anom/tbl/GR.html");
+	loadTable("table-container-9", "ecens_evo_anom/tbl/HR.html");
+	loadTable("table-container-10", "ecens_evo_anom/tbl/HU.html");
+	loadTable("table-container-11", "ecens_evo_anom/tbl/IT.html");
+	loadTable("table-container-12", "ecens_evo_anom/tbl/NL.html");
+	loadTable("table-container-13", "ecens_evo_anom/tbl/PL.html");
+	loadTable("table-container-14", "ecens_evo_anom/tbl/RO.html");
+	loadTable("table-container-15", "ecens_evo_anom/tbl/SI.html");
+	loadTable("table-container-16", "ecens_evo_anom/tbl/SK.html");
 
 </script>
 <script>
