--- a/wx/ecens_evo.html
+++ b/wx/ecens_evo.html
@@ -232,7 +232,7 @@ body {
 	<div id="page-navbar-container">
 		<ul id="page-navbar"></ul>
 	</div>
-    <h1>EC Ensemble Evolution</h1>
+    <h1>EC Ensemble Evolution (Absolute)</h1>
 	<H4 id="timestamp">Last updated:</h4>
 	<p>Columns represent forecast issue date. Rows represent weather delivery date. Think of it as, for a fixed row, left to right tells you the timeline of how the forecast for that day evolves. Temps quoted in degrees Celsius. Numbers shown here are absolute temps. </p>
 	
