--- a/navbar.html
+++ b/navbar.html
@@ -41,6 +41,7 @@
         <div class="submenu">
             <a href="/d_dash/wx/ecens_evo.html">EC ENS Evo (Abs)</a>
 			<a href="/d_dash/wx/ecens_evo_anom.html">EC ENS Evo (Anom)</a>
+			<a href="/d_dash/wx/country_anoms.html">Temp Anomaly History</a>
             <!--a href="/d_dash/test/wx_temps.html">Test2</a> -->
         </div>
     </div>
