--- a/navbar.html
+++ b/navbar.html
@@ -42,6 +42,7 @@
             <a href="/d_dash/wx/ecens_evo.html">EC ENS Evo (Abs)</a>
 			<a href="/d_dash/wx/ecens_evo_anom.html">EC ENS Evo (Anom)</a>
 			<a href="/d_dash/wx/country_anoms.html">Temp Anomaly History</a>
+			<a href="/d_dash/wx/model_performance.html">Model Performance</a>
             <!--a href="/d_dash/test/wx_temps.html">Test2</a> -->
         </div>
     </div>
